--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 tasks:
-  - command: pip3 install -U platformio && platformio run -e tasmota
+  - command: pip3 install -U platformio && platformio run -e tasmota-4M
 
 image:
   file: .gitpod.Dockerfile
