Librar.properties now correct Thanks to  @barbudor

--- a/lib/lib_i2c/MCP47X6/library.properties
+++ b/lib/lib_i2c/MCP47X6/library.properties
@@ -6,5 +6,5 @@ sentence=This is an Arduino library for interfacing to Microchip MCP47X6 series 
 paragraph=The supported devices are MCP4706 8-bit, MCP4716 10-bit and MCP4726 12-bit.
 category=Device Control
 url=https://github.com/uChip/MCP47X6
-architectures=avr
+architectures=*
 includes=MCP47X6.h
